# house-numbers

./: CMakeLists.txt  Dockerfile  README.md  flyway.conf  init.sql  main.cpp  net.hpp  pip.conf
app/: CMakeLists.txt  app.cpp
migrations/: V1__init.sql
scripts/: new_record.sql
tests/: CMakeLists.txt  cuda.py  verification.cpp
trainer/: .dockerignore  CMakeLists.txt  net.cpp  pytorch.conf  trainer.cpp
